# message_localization_rs

./: Cargo.toml  README.md
locale-data/: basic_data.json
src/: country.rs  lib.rs  locale.rs  locale_basic_data.rs  message_locator.rs
tests/: tests.rs
