[package]
name = "recoyx_message_localization"
version = "1.1.2"
authors = ["Klaider <HydroperHH@gmail.com>"]
edition = "2018"
keywords = ["localization", "internationalization", "i18n", "l10n"]
categories = ["localization"]
repository = "https://github.com/recoyx/message_localization_rs"
description = "Flexible message localization."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
language-tag = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.123"
serde_json = "1.0.62"
serde_repr = "0.1.6"
isocountry = "0.3.2"
maplit = "1.0.2"
regex = "1.4.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# unic-langid = "0.9.0"
lazy_static = "1.4.0"
lazy-regex = "0.1.4"
isolang = "1.0.0"
icu_locid = "0.1"